All cells have a class. Avoid wrap in modified cell.

--- a/collective/edm/listing/skins/edm_listing_styles/edmlisting.css
+++ b/collective/edm/listing/skins/edm_listing_styles/edmlisting.css
@@ -94,3 +94,6 @@ pb-ajax #edit-popup-buttons,
 #foldercontents-modified-column{
 	width: 10em;
 }
+.foldercontents-modified-cell{
+	white-space: nowrap;
+}
